--- a/latvian-guesser/package.json
+++ b/latvian-guesser/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "daisyui": "^4.12.23",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
